--- a/modules/html/footer/footer.less
+++ b/modules/html/footer/footer.less
@@ -28,23 +28,23 @@ footer {
       height: 90px;
     }
     .facebook {
-      background: url(../home/img/facebook_normal.png);
+      background: url(../home/img/facebook_normal.png?__inline);
       &:hover {
-        background: url(../home/img/facebook_hover.png);
+        background: url(../home/img/facebook_hover.png?__inline);
       }
     }
 
     .line {
-      background: url(../home/img/line_normal.png);
+      background: url(../home/img/line_normal.png?__inline);
       &:hover {
-        background: url(../home/img/line_hover.png);
+        background: url(../home/img/line_hover.png?__inline);
       }
     }
 
     .youtube {
-      background: url(../home/img/youtube_normal.png);
+      background: url(../home/img/youtube_normal.png?__inline);
       &:hover {
-        background: url(../home/img/youtube_hover.png);
+        background: url(../home/img/youtube_hover.png?__inline);
       }
     }
   }
