--- a/modules/html/home/course/course.less
+++ b/modules/html/home/course/course.less
@@ -146,7 +146,7 @@
 .banner-section {
   padding-top: 70px;
   box-sizing: border-box;
-  background: url(../img/banner.png) no-repeat;
+  background: #6c7279 url(../img/banner.png) no-repeat 50% 0;
   height: 302px;
   p {
     width: 622px;
