--- a/modules/html/home/home/home.less
+++ b/modules/html/home/home/home.less
@@ -14,7 +14,7 @@
       font: 24px/46px '黑体';
       color: #fff;
       &:hover {
-        background: #93cc4a;
+        background: #46B7EB;
         text-decoration: none;
       }
     }
