--- a/modules/html/home/contact/contact.less
+++ b/modules/html/home/contact/contact.less
@@ -41,3 +41,36 @@
     padding-bottom: 20px;
   }
 }
+
+@media only screen and (max-width: 767px){
+  .contact-section {
+    height: 740px;
+    background: url(../img/bg_contact.png) no-repeat 50% 0;
+    overflow: hidden;
+    .main-content {
+      margin: 50px 20px 0;
+      height: auto;
+      background: #fff;
+      box-shadow: 0 0 1px 1px #ccc;
+      box-sizing: border-box;
+      padding: 50px 20px 20px;
+      width: auto;
+      p {
+        margin-top: 30px;
+        font-size: 17px;
+        color: #4a494a;
+      }
+
+      .tc {
+        text-align: center;
+        padding: 35px 0 20px;
+      }
+
+      .phone {
+        font: 42px/50px 'LiHei Pro';
+        color: #000;
+        text-align: center;
+      }
+    }
+  }
+}
