--- a/modules/html/home/home/home.less
+++ b/modules/html/home/home/home.less
@@ -1,10 +1,34 @@
+@font-face {
+  font-family: 'Kristi';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Kristi'), url(./Kristi.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
 .home-section {
-  background: #7f7f7e url(../img/bg_top.jpg) no-repeat 50% 0;
+  background: #7f7f7e url(../img/bg_top.png) no-repeat 50% 0;
   height: 900px;
+  .slogan {
+    text-align: center;
+    color: #fff;
+    h2 {
+      padding-top: 230px;
+      font: 190px/200px 'Kristi', 'Nixie One', 'Raleway', "Helvetica Neue", "Helvetica";
+    }
+    .txt-en {
+      padding-top:10px;
+      font: 37px/40px 'Raleway Medium';
+    }
+    .txt-cn {
+      padding-top: 25px;
+      font: 48px/50px 'LiHei Pro';
+    }
+  }
   .button-nav {
     text-align: center;
     position: relative;
-    top: 590px;
+    margin-top: 50px;
     a {
       width: 194px;
       height: 52px;
@@ -28,10 +52,55 @@
     background: url(../img/mouse.png);
     width: 33px;
     height: 67px;
-    position: absolute;
+    position: fixed;
     left: 50%;
     margin-left: -16px;
     top: 100%;
     margin-top: -80px;
+  }
+}
+
+
+@media only screen and (max-width: 767px) {
+  .home-section {
+    // background: #7f7f7e url(../img/bg_top.png) no-repeat 50% 0;
+    background-size: cover;
+    height: 550px;
+    .slogan {
+      text-align: center;
+      color: #fff;
+      h2 {
+        padding-top: 180px;
+        font: 72px/80px 'Kristi', 'Nixie One', 'Raleway', "Helvetica Neue", "Helvetica";
+      }
+      .txt-en {
+        padding-top:10px;
+        font: 12px/14px 'Raleway Medium';
+      }
+      .txt-cn {
+        padding-top: 25px;
+        font: 16px/18px 'LiHei Pro';
+      }
+    }
+    .button-nav {
+      text-align: center;
+      position: relative;
+      margin-top: 50px;
+      a {
+        width: 160px;
+        height: 40px;
+        border: 4px solid #696663;
+        border-radius: 20px;
+        font: 18px/36px '黑体';
+      }
+    }
+
+    .free-test {
+      margin-left: 10px;
+    }
+
+    .mouse {
+      display: none;
+    }
   }
 }
