--- a/modules/html/footer/footer.less
+++ b/modules/html/footer/footer.less
@@ -85,3 +85,12 @@ footer {
     }
   }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 1142px) {
+  footer {
+    .layout-row {
+      width: auto !important;
+      padding: 0 20px;
+    }
+  }
+}
