--- a/modules/html/home/course/course.less
+++ b/modules/html/home/course/course.less
@@ -68,13 +68,13 @@
 
   .carousel-outer {
     max-width: 1210px;
-    min-width: 1063px;
+    //min-width: 1063px;
   }
 
   .caro-item {
     .flex();
     max-width: 1210px;
-    min-width: 1063px;
+    //min-width: 1063px;
     li {
       box-sizing: border-box;
       padding-top: 200px;
@@ -263,5 +263,12 @@
         text-decoration: none;
       }
     }
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1142px) {
+  .course-section {
+    width: 100%;
+    overflow: hidden;
   }
 }
