--- a/modules/html/home/home/home.less
+++ b/modules/html/home/home/home.less
@@ -38,14 +38,22 @@
       font: 24px/46px '黑体';
       color: #fff;
       &:hover {
-        background: #46B7EB;
         text-decoration: none;
       }
     }
   }
 
+  .reserve-btn {
+    &:hover {
+      background: #93cc4a;
+    }
+  }
+
   .free-test {
     margin-left: 45px;
+    &:hover {
+      background: #46B7EB;
+    }
   }
 
   .mouse {
@@ -102,5 +110,16 @@
     .mouse {
       display: none;
     }
+  }
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 1142px) {
+  .home-section .slogan h2 {
+    font-size: 160px;
+  }
+
+  .home-section .slogan .txt-en {
+    font-size: 34px;
   }
 }
