add config & up css

--- a/modules/html/footer/footer.less
+++ b/modules/html/footer/footer.less
@@ -32,6 +32,7 @@ footer {
       background-size: cover;
       &:hover {
         background: url(../home/img/facebook_hover.png?__inline);
+        background-size: cover;
       }
     }
 
@@ -40,6 +41,7 @@ footer {
       background-size: cover;
       &:hover {
         background: url(../home/img/line_hover.png?__inline);
+        background-size: cover;
       }
     }
 
@@ -48,6 +50,7 @@ footer {
       background-size: cover;
       &:hover {
         background: url(../home/img/youtube_hover.png?__inline);
+        background-size: cover;
       }
     }
   }
