--- a/modules/html/home/home/home.less
+++ b/modules/html/home/home/home.less
@@ -123,3 +123,10 @@
     font-size: 34px;
   }
 }
+
+@media only screen and (min-width: 1441px) {
+  .home-section{
+    background: #7f7f7e url(../img/bg_top.png) no-repeat 50% 0;
+    background-size: cover;
+  }
+}
